# RaytracerSample

./: .gitignore  CMakeLists.txt  README.md  image.ppm  main.cpp
RayTracer/examples/: random_scene.h
RayTracer/maths/: vec3.h
RayTracer/objects/: camera.h  dielectric.h  hittable.h  lambertian.h  material.h  metal.h  sphere.h
RayTracer/utils/: color.h  common.h
docs/: what-is-ray-tracing.md
maths/: ray.h
